# iphone-yt-download

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PRD.md  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml  start.sh
docker/: Caddyfile  Dockerfile.api  Dockerfile.worker
docs/: deployment-railway.md  deployment.md  iphone-shortcut.md
src/ytdl/: __init__.py  api.py  cobalt.py  config.py  downloader.py  errors.py  main.py  models.py  storage.py  worker.py
